# MitracheAndreea_Practica2024

./: CMakeCache.txt  CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Makefile  NetworkConnection.cpp  NetworkConnection.h  README.md  clientHTTP  clientHTTP.c  clientHTTP.cpp  clientHTTP.h  cmake_install.cmake  http_client.cpp  http_client.h  log.txt  main.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
output/: clientHTTP
